--- a/style.css
+++ b/style.css
@@ -27,6 +27,28 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.debug *{
+    border: 1px dashed;
+
+}
+/* header */
+#site.header{
+    height: 70px;
+    background-color: var(--tb-lighter);
+    padding: .5rem;
+
+}
+
+#logo_image{
+    height: 100px
+    vertical-align: middle;
+}
+#logo_text{
+    font-size: 2.5rem;
+    vertical-align: middle;
+    font-weight: 600;
+}
+
 .card{
     background-color: var(--tb-lighter);
     border-radius: 0.75rem;
@@ -60,7 +82,7 @@ body{
     border: 1px solid var(--tb-primary);
 
 }
-.tbn-outline-light{
+.n-outline-light{
     background-color: transparent;
     color: var(--tb-lighter);
     border: 2px
@@ -105,10 +127,7 @@ body{
     color: var(--tb-cancel-color);
 }
 
-.debug *{
-    border: 1px dashed;
 
-}
 .container{
     width: 80%;
     max-width: 980px;
