--- a/style.css
+++ b/style.css
@@ -27,6 +27,49 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+
+.container{
+    width: 80%;
+    max-width: 980px;
+    margin: auto;
+
+}
+
+.card {
+    background-color: var(--tb-lighter);
+    border-radius: 0.75rem;
+    margin: 1rem;
+}
+.top,
+.bottom{
+    padding-left: 3rem;
+}
+.top{
+    padding-top: 1.5rem;
+    padding-bottom: 0.5rem;
+    border-bottom: 1px solid var(--tb-page-bg);
+
+}
+.bottom{
+    padding-top: 2rem;
+}
+.btn{
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    border: none;
+}
+.btn-primary{
+    background-color: var(--tb-primary);
+    color: var(--tb-lighter);
+    border: 1px solid var(--tb-primary);
+}
+.btn-outline-light{
+    background-color: transparent;
+    color: var(--tb-light);
+    border: 1px solid var(--tb-light);
+}
+}
+
 .debug *{
     border: 1px dashed;
 
@@ -40,113 +83,13 @@ body{
 }
 
 #logo_image{
-    height: 100px
     vertical-align: middle;
+    height: 100px;
+    font-size: 600;
+    
 }
 #logo_text{
     font-size: 2.5rem;
     vertical-align: middle;
     font-weight: 600;
-}
-
-.card{
-    background-color: var(--tb-lighter);
-    border-radius: 0.75rem;
-    margin: 1rem;
-
-}
-.top,
-.bottom{
-    padding-left: 35rem;
-}
-.top{
-    padding-top: 1rem;
-    padding-bottom: 0.5rem;
-    border-bottom: 2px solid var(--tb-page-bg);
-
-}
-
-.bottom{
-    padding-top: 2rem;
-
-
-}
-.btn{
-    padding:0.5rem 1rem;
-    border-radius: 0.25rem;
-    border: none;
-}
-.btn-primary{
-    background-color: var(--tb-primary);
-    color: var(--tb-lighter);
-    border: 1px solid var(--tb-primary);
-
-}
-.n-outline-light{
-    background-color: transparent;
-    color: var(--tb-lighter);
-    border: 2px
-}
-.tag{
-    display: inline-block;
-    font-size: 10px;
-    border-radius: 0.5rem;
-    background-color: red;
-    color: var(--tb-lighter);
-    padding: 0.25rem 0.5rem;
-}
-.tag-editorial{
-    background-color: var(--tb-primary);
-}
-.tag-goals{
-    background-color: var(--tb-goals-bg);
-}
-.tag-recruiting{
-    background-color: var(--tb-recruiting-bg);
-}
-.tag-mobile{
-    background-color: var(--tb-mobile-bg);
-}
-.tag-website{
-    background-color: var(--tb-website-bg);
-}
-.tag-sales{
-    background-color: var(--tb-sales-bg);
-}
-.circle-cancel
-.circle-check{
-    color: var(--tb-checkmark-color);
-    border: 1px solid;
-    text-align: ;
-
-}
-.circle-check{
-    color: var(--tb-checkmark-color);
-}
-.circle-cancel{
-    color: var(--tb-cancel-color);
-}
-
-
-.container{
-    width: 80%;
-    max-width: 980px;
-    margin: auto;
-}
-
-#site_header{
-    
-    background-color: var(--tb-lighter);
-    padding: .5rem;
-}
-
-#logo_image{
-    vertical-align: middle;
-
-}
-#logo_text{
-    font-size: 2.5rem;
-    vertical-align: middle;
-    font-weight: 600px;
-
 }
