--- a/style.css
+++ b/style.css
@@ -27,11 +27,23 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+ul{
+    list-style: none;
+    li {
+       margin-bottom: 1rem; 
+    }
+}
+
 
 .container{
     width: 80%;
     max-width: 980px;
     margin: auto;
+
+}
+
+details {
+    margin-bottom: 2rem;
 
 }
 
@@ -68,6 +80,67 @@ body{
     color: var(--tb-light);
     border: 1px solid var(--tb-light);
 }
+
+.tag{
+    display: inline-block;
+    font-size: 10px;
+    border-radius: 0.5rem;
+    color: var(--tb-lighter);
+    padding: 0.25rem 0.5rem;
+    text-transform: capitalize;
+
+
+}
+
+.tag-editorial{
+    background-color: var(--tb-primary);
+
+}
+
+.tag-goals{
+    background-color: var(--tb-goals-bg);
+    
+}
+
+.tag-recruiting{
+    background-color: var(--tb-recruiting-bg);
+    
+}
+
+.tag-mobile{
+    background-color: var(--tb-mobile-bg);
+    
+}
+
+.tag-website{
+    background-color: var(--tb-website-bg);
+    
+}
+
+.tag-sales{
+    background-color: var(--tb-sales-bg);
+    
+}
+
+.circle{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 1px solid;
+    text-align: center;
+    line-height: 20px;
+}
+
+.circle-check{
+    color: var(--tb-checkmark-color);
+    border: 1px solid;
+    text-align: center;
+    line-height: 20px;
+}
+
+.circle-cancel{
+    color: var(--tb-cancel-color);
+
 }
 
 .debug *{
